# haqlite

./: .gitignore  ADVERSARIAL_REVIEW.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  ROADMAP.md  SYSTEM.md
.cargo/: config.toml
benchmark/: Dockerfile  dockerignore  entrypoint.sh  fly.toml
crates/haqlite/: Cargo.toml  README.md  ROADMAP.md
crates/haqlite-turbolite/: Cargo.toml
crates/haqlite-turbolite/src/: builder.rs  follower_behavior.rs
crates/haqlite-turbolite/tests/: builder_explicit.rs  e2e_modes.rs  flotilla_regression.rs  lease_split_brain.rs  mode_f_s3primary.rs  mode_i_production.rs  mode_matrix.rs  property_execution.rs  property_manifest_publish.rs  shared_mode.rs  test_manifest_store.rs  turbolite_shared.rs  turbolite_split_brain.rs
crates/haqlite/fuzz/: Cargo.toml
crates/haqlite/src/: database.rs  hrana.rs  serve.rs
crates/haqlite/tests/: builder_explicit.rs  flotilla_regression.rs  mode_f_s3primary.rs  property_execution.rs  property_manifest_publish.proptest-regressions  property_manifest_publish.rs  test_fence_on_lease_loss.rs  test_hrana_ha.rs  test_lease_store.rs  test_manifest_store.rs
fuzz/fuzz_targets/: hrana_protocol.rs  sql_forwarding.rs
haqlite-turbolite/: Cargo.toml  README.md
haqlite-turbolite/src/: builder.rs  cursor_chain.rs  follower_behavior.rs  lib.rs  phase4_chain.rs  replay_sink.rs  replicator.rs  rollback_detection.rs
haqlite-turbolite/tests/: builder_explicit.rs  continuous_bootstrap.rs  cursor_handshake.rs  cursor_object_store.rs  e2e_modes.rs  flotilla_regression.rs  lease_split_brain.rs  mode_f_s3primary.rs  mode_i_production.rs  mode_matrix.rs  mode_role_bail.rs  phase4_handshake.rs  phase4_object_store.rs  property_execution.rs  property_manifest_publish.rs  shared_mode.rs  singlewriter_failover.rs  static_call_list.rs  test_manifest_store.rs  turbolite_manifest_round_trip.rs  turbolite_shared.rs  turbolite_split_brain.rs
haqlite-turbolite/tests/common/: mod.rs
src/: cli_config.rs  client.rs  coordinator.rs  database.rs  env.rs  epoch_fence.rs  error.rs  follower.rs  follower_behavior.rs  forwarding.rs  hrana.rs  http_page_storage.rs  lease.rs  lease_store.rs  lib.rs  metrics.rs  node_registry.rs  ops.rs  replicator.rs  serve.rs  turbolite_replicator.rs  types.rs
tests/: builder_explicit.rs  cli_config.rs  e2e_ha.sh  e2e_modes.py  e2e_modes.rs  e2e_shared.py  ha_database.rs  integration.rs  lease_split_brain.rs  mode_f_s3primary.rs  mode_i_production.rs  mode_matrix.rs  mode_role_bail.rs  plain_replicator_regression.rs  property_execution.proptest-regressions  property_execution.rs  property_lease_contention.rs  property_manifest_publish.rs  public_quickstart.rs  shared_mode.rs  test_fence_on_lease_loss.rs  test_hrana.rs  test_hrana_ha.rs  test_lease_store.rs  test_manifest_store.rs  test_ops.rs  test_with_conn.rs  test_with_redlite.rs  turbolite_shared.rs  turbolite_split_brain.rs
tests/common/: mod.rs
