[package]
name = "haqlite"
version = "0.4.0"
edition = "2021"
description = "HA SQLite with one line of code. Leader election, WAL replication, write forwarding — just your app + an S3 bucket."
authors = ["Russell Romney <russellromney@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/russellromney/haqlite"
keywords = ["sqlite", "ha", "replication", "leader-election", "s3"]
categories = ["database", "network-programming"]

[dependencies]
# HA coordination framework
hadb = { path = "../hadb/hadb", version = "0.4.0" }
hadb-lease-s3 = { path = "../hadb/hadb-lease-s3", version = "0.4.0" }

# WAL sync primitives
walrust = { path = "../walrust/crates/walrust-core", version = "0.3.1" }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# S3 (for S3LeaseStore)
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-smithy-types = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"

# Utilities
anyhow = "1"
arc-swap = "1"
parking_lot = "0.12"
tracing = "0.1"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
hostname = "0.4"

# HTTP (write forwarding + experiment binaries)
axum = "0.8"
reqwest = { version = "0.12", features = ["json"] }

# NATS lease store (optional)
hadb-lease-nats = { path = "../hadb/hadb-lease-nats", version = "0.4.0", optional = true }

# Lease abstractions (trait crate provides FenceSource used by the
# Cinch storage adapter for fenced writes).
hadb-lease = { path = "../hadb/hadb-lease", version = "0.4.0" }

# Storage substrate (trait + impls)
hadb-storage = { path = "../hadb/hadb-storage", version = "0.4.0" }
hadb-storage-s3 = { path = "../hadb/hadb-storage-s3", version = "0.4.0" }
hadb-storage-cinch = { path = "../hadb/hadb-storage-cinch", version = "0.4.0" }

# Cinch-protocol HTTP lease store + generic HTTP manifest store
# (for embedded replicas via Grabby or engine)
hadb-lease-cinch = { path = "../hadb/hadb-lease-cinch", version = "0.4.0" }
hadb-manifest-http = { path = "../hadb/hadb-manifest-http", version = "0.4.0" }

# Manifest stores (optional, for Shared mode and Dedicated mode manifest polling)
hadb-manifest-nats = { path = "../hadb/hadb-manifest-nats", version = "0.4.0", optional = true }
hadb-manifest-s3 = { path = "../hadb/hadb-manifest-s3", version = "0.4.0", optional = true }

# Turbolite VFS (optional storage engine). The library depends on hadb-storage
# (trait) only; concrete S3Storage for page storage is injected by haqlite.
turbolite = { path = "../turbolite", version = "0.4.0", features = ["zstd"] }

# Shared CLI framework
hadb-cli = { path = "../hadb/hadb-cli", version = "0.4.0" }

# Hrana protocol (libSQL HTTP API)
hrana-server = { path = "../hrana-server", version = "0.1.0" }

# CLI + logging
clap = { version = "4", features = ["derive", "env"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# SQLite
rusqlite = { version = "0.35", features = ["bundled"] }

[features]
nats-lease = ["dep:hadb-lease-nats"]
nats-manifest = ["dep:hadb-manifest-nats"]
s3-manifest = ["dep:hadb-manifest-s3"]

[[bin]]
name = "haqlite"
path = "src/bin/main.rs"

[[bin]]
name = "haqlite-ha-experiment"
path = "src/bin/ha_experiment.rs"

[[bin]]
name = "haqlite-ha-writer"
path = "src/bin/ha_writer.rs"

[[bin]]
name = "haqlite-e2e"
path = "src/bin/e2e.rs"

[[bin]]
name = "haqlite-shared-experiment"
path = "src/bin/shared_experiment.rs"

[[bin]]
name = "haqlite-experiment"
path = "src/bin/experiment.rs"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.35", features = ["bundled"] }
async-trait = "0.1"
async-nats = "0.46"
futures = "0.3"
chrono = "0.4"
serde_json = "1"
tower = { version = "0.5", features = ["util"] }
http = "1"
http-body-util = "0.1"
axum = "0.8"
proptest = "1.5"
proptest-derive = "0.5"
redlite = { path = "../redlite/crates/redlite", version = "0.1.0" }
