[workspace]
members = [".", "haqlite-turbolite"]
resolver = "2"

[patch."https://github.com/russellromney/hadb.git"]
hadb = { path = "../hadb/hadb" }
hadb-changeset = { path = "../hadb/hadb-changeset" }
hadb-cli = { path = "../hadb/hadb-cli" }
hadb-io = { path = "../hadb/hadb-io" }
hadb-lease = { path = "../hadb/hadb-lease" }
hadb-lease-cinch = { path = "../hadb/hadb-lease-cinch" }
hadb-lease-mem = { path = "../hadb/hadb-lease-mem" }
hadb-lease-nats = { path = "../hadb/hadb-lease-nats" }
hadb-lease-s3 = { path = "../hadb/hadb-lease-s3" }
hadb-storage = { path = "../hadb/hadb-storage" }
hadb-storage-cinch = { path = "../hadb/hadb-storage-cinch" }
hadb-storage-local = { path = "../hadb/hadb-storage-local" }
hadb-storage-s3 = { path = "../hadb/hadb-storage-s3" }
turbodb = { path = "../hadb/turbodb" }
turbodb-manifest-cinch = { path = "../hadb/turbodb-manifest-cinch" }
turbodb-manifest-mem = { path = "../hadb/turbodb-manifest-mem" }

[workspace.package]
version = "0.4.0"
edition = "2021"
authors = ["Russell Romney <russellromney@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/russellromney/haqlite"

[package]
name = "haqlite"
version = "0.4.0"
edition = "2021"
description = "HA SQLite with one line of code. Leader election, WAL replication, write forwarding — just your app + an S3 bucket."
authors = ["Russell Romney <russellromney@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/russellromney/haqlite"
keywords = ["sqlite", "ha", "replication", "leader-election", "s3"]
categories = ["database", "network-programming"]

[dependencies]
# HA coordination framework
hadb = { git = "https://github.com/russellromney/hadb.git", version = "0.4.0", package = "hadb", branch = "hoist-prereq-internal-lease-store" }
hadb-lease-s3 = { git = "https://github.com/russellromney/hadb.git", version = "0.4.0", package = "hadb-lease-s3", branch = "hoist-prereq-internal-lease-store" }

# WAL sync primitives
walrust = { git = "https://github.com/russellromney/walrust.git", version = "0.3.1", package = "walrust", branch = "hoist-public-deps" }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# S3 (for S3LeaseStore)
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-smithy-types = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"

# Utilities
anyhow = "1"
arc-swap = "1"
parking_lot = "0.12"
tracing = "0.1"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
hostname = "0.4"

# HTTP (write forwarding + experiment binaries)
axum = "0.8"
reqwest = { version = "0.12", features = ["json"] }

# NATS lease store (optional)
hadb-lease-nats = { git = "https://github.com/russellromney/hadb.git", version = "0.4.0", package = "hadb-lease-nats", branch = "hoist-prereq-internal-lease-store", optional = true }

# Lease abstractions (trait crate provides FenceSource used by fenced
# storage adapters).
hadb-lease = { git = "https://github.com/russellromney/hadb.git", version = "0.4.0", package = "hadb-lease", branch = "hoist-prereq-internal-lease-store" }

# Storage substrate (trait + impls)
hadb-storage = { git = "https://github.com/russellromney/hadb.git", version = "0.4.0", package = "hadb-storage", branch = "hoist-prereq-internal-lease-store" }
hadb-storage-s3 = { git = "https://github.com/russellromney/hadb.git", version = "0.4.0", package = "hadb-storage-s3", branch = "hoist-prereq-internal-lease-store" }
hadb-storage-cinch = { git = "https://github.com/russellromney/hadb.git", version = "0.4.0", package = "hadb-storage-cinch", branch = "hoist-prereq-internal-lease-store" }

# HTTP lease store
hadb-lease-cinch = { git = "https://github.com/russellromney/hadb.git", version = "0.4.0", package = "hadb-lease-cinch", branch = "hoist-prereq-internal-lease-store" }

# Shared CLI framework
hadb-cli = { git = "https://github.com/russellromney/hadb.git", version = "0.4.0", package = "hadb-cli", branch = "hoist-prereq-internal-lease-store" }

# Hrana protocol (libSQL HTTP API)
hrana-server = { git = "https://github.com/russellromney/hrana-server.git", version = "0.1.0", package = "hrana-server" }

# CLI + logging
clap = { version = "4", features = ["derive", "env"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# SQLite
rusqlite = { version = "0.35", features = ["bundled"] }

[features]
nats-lease = ["dep:hadb-lease-nats"]

[[bin]]
name = "haqlite"
path = "src/bin/main.rs"

[[bin]]
name = "haqlite-ha-experiment"
path = "src/bin/ha_experiment.rs"

[[bin]]
name = "haqlite-ha-writer"
path = "src/bin/ha_writer.rs"

[[bin]]
name = "haqlite-e2e"
path = "src/bin/e2e.rs"

[[bin]]
name = "haqlite-shared-experiment"
path = "src/bin/shared_experiment.rs"

[[bin]]
name = "haqlite-experiment"
path = "src/bin/experiment.rs"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.35", features = ["bundled"] }
async-trait = "0.1"
async-nats = "0.46"
futures = "0.3"
chrono = "0.4"
serde_json = "1"
tower = { version = "0.5", features = ["util"] }
http = "1"
http-body-util = "0.1"
axum = "0.8"
proptest = "1.5"
proptest-derive = "0.5"
hadb-storage-local = { git = "https://github.com/russellromney/hadb.git", version = "0.4.0", package = "hadb-storage-local", branch = "hoist-prereq-internal-lease-store" }
