[package]
name = "haqlite-turbolite"
version = "0.4.0"
edition = "2021"
description = "Tiered HA SQLite: haqlite + turbolite VFS for page-level S3 tiering"
authors = ["Russell Romney <russellromney@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/russellromney/haqlite"
keywords = ["sqlite", "ha", "tiered-storage", "vfs", "s3"]
categories = ["database", "network-programming"]

[dependencies]
# Base haqlite (walrust HA layer) — workspace root.
haqlite = { path = "..", version = "0.4.0" }

# HA coordination
hadb = { git = "https://github.com/russellromney/hadb.git", version = "0.4.0", package = "hadb", branch = "hoist-prereq-internal-lease-store" }
hadb-lease = { git = "https://github.com/russellromney/hadb.git", version = "0.4.0", package = "hadb-lease", branch = "hoist-prereq-internal-lease-store" }

# Storage substrate
turbodb = { git = "https://github.com/russellromney/hadb.git", version = "0.4.0", package = "turbodb", branch = "hoist-prereq-internal-lease-store" }
turbodb-manifest-cinch = { git = "https://github.com/russellromney/hadb.git", version = "0.4.0", package = "turbodb-manifest-cinch", branch = "hoist-prereq-internal-lease-store" }

# Turbolite VFS
turbolite = { git = "https://github.com/russellromney/turbolite.git", version = "0.4.0", features = ["zstd", "wal"], branch = "benchmark/s3-express-verify" }

# WAL sync (walrust is always present for Continuous/Checkpoint paths)
walrust = { git = "https://github.com/russellromney/walrust.git", version = "0.3.1", package = "walrust", branch = "hoist-public-deps" }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
async-trait = "0.1"

# Utilities
anyhow = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

# Serialization
rmp-serde = "1"

# HTTP (for rollback_detection fetch)
reqwest = { version = "0.12", features = ["json"] }

# HTTP lease store (for builder convenience)
hadb-lease-cinch = { git = "https://github.com/russellromney/hadb.git", version = "0.4.0", package = "hadb-lease-cinch", branch = "hoist-prereq-internal-lease-store" }

# S3 storage backend (optional, for direct S3 use)
hadb-storage = { git = "https://github.com/russellromney/hadb.git", version = "0.4.0", package = "hadb-storage", branch = "hoist-prereq-internal-lease-store" }
hadb-storage-s3 = { git = "https://github.com/russellromney/hadb.git", version = "0.4.0", package = "hadb-storage-s3", branch = "hoist-prereq-internal-lease-store", optional = true }
hadb-storage-cinch = { git = "https://github.com/russellromney/hadb.git", version = "0.4.0", package = "hadb-storage-cinch", branch = "hoist-prereq-internal-lease-store" }

# SQLite
rusqlite = { version = "0.35", features = ["bundled"] }

[features]
default = ["s3"]
s3 = ["dep:hadb-storage-s3"]
legacy-s3-mode-tests = ["s3"]

[[bin]]
name = "haqlite-turbolite-bench"
path = "src/bin/tiered_bench.rs"
required-features = ["s3"]

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
turbodb-manifest-mem = { git = "https://github.com/russellromney/hadb.git", version = "0.4.0", package = "turbodb-manifest-mem", branch = "hoist-prereq-internal-lease-store" }
hadb-storage-local = { git = "https://github.com/russellromney/hadb.git", version = "0.4.0", package = "hadb-storage-local", branch = "hoist-prereq-internal-lease-store" }
proptest = "1"
