[package]
name = "haqlite-turbolite"
version = "0.4.0"
edition = "2021"
description = "Tiered HA SQLite: haqlite + turbolite VFS for page-level S3 tiering"
authors = ["Russell Romney <russellromney@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/russellromney/haqlite"
keywords = ["sqlite", "ha", "tiered-storage", "vfs", "s3"]
categories = ["database", "network-programming"]

[dependencies]
# Base haqlite (walrust HA layer)
haqlite = { path = "../haqlite", version = "0.4.0" }

# HA coordination
hadb = { path = "../../../hadb/hadb", version = "0.4.0" }
hadb-lease = { path = "../../../hadb/hadb-lease", version = "0.4.0" }

# Storage substrate
turbodb = { path = "../../../hadb/turbodb", version = "0.4.0" }
turbodb-manifest-cinch = { path = "../../../hadb/turbodb-manifest-cinch", version = "0.4.0" }

# Turbolite VFS
turbolite = { path = "../../../turbolite", version = "0.4.0", features = ["zstd"] }

# WAL sync (walrust is always present for Continuous/Checkpoint paths)
walrust = { path = "../../../walrust/crates/walrust-core", version = "0.3.1" }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
async-trait = "0.1"

# Utilities
anyhow = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

# Serialization
rmp-serde = "1"

# HTTP (for rollback_detection fetch)
reqwest = { version = "0.12", features = ["json"] }

# Cinch-protocol HTTP lease store (for builder convenience)
hadb-lease-cinch = { path = "../../../hadb/hadb-lease-cinch", version = "0.4.0" }

# S3 storage backend (optional, for direct S3 use)
hadb-storage = { path = "../../../hadb/hadb-storage", version = "0.4.0" }
hadb-storage-s3 = { path = "../../../hadb/hadb-storage-s3", version = "0.4.0", optional = true }
hadb-storage-cinch = { path = "../../../hadb/hadb-storage-cinch", version = "0.4.0" }

# SQLite
rusqlite = { version = "0.35", features = ["bundled"] }

[features]
default = ["s3"]
s3 = ["dep:hadb-storage-s3"]

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
turbodb-manifest-mem = { path = "../../../hadb/turbodb-manifest-mem", version = "0.4.0" }
hadb-storage-local = { path = "../../../hadb/hadb-storage-local", version = "0.4.0" }
